...
    return units;
  }

  static final projects = <Project>[
    Project(
      id: 'prj-nestone',
      name: 'NestOne',
      type: ProjectType.residentialComplex,
      status: ProjectStatus.underConstruction,
      district: 'Shayxontohur',
      address: 'Botyr Zakirov ko\'chasi 1B, Shayxontohur, Tashkent',
      lat: 41.31215655652716,
      lng: 69.25275117116448,
...
